Fixed Description Not Centered On Mobile

--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -134,6 +134,7 @@ nav {
 .description {
   align-items: center;
   text-align: center;
+  justify-content: center;
   width: 50%;
   margin-right: 100px;
 
@@ -149,7 +150,7 @@ nav {
   @media screen and (max-width: 768px) {
     justify-content: center;
     width: 60vw;
-    margin-left: auto;
+    margin: 0 auto;
 
     .btn-container {
       display: flex;
